--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -59,6 +59,7 @@
                        <hr class="section-heading-spacer">
                     </div>
                 </div>
+                <!-- ejemplo -->
                 <div class="row">
                   <div class="col-md-4">
                     <img src="../img/genesis.jpg" class="img-fluid" >
