cambio de imagen

--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -54,23 +54,21 @@
                            <img src="../img/genesis.jpg" class="img-fluid" >   
                     </div>
                     <div class="col-md-10">
-                    <h2 class="section-heading nomargin">My name</h2>
-                      <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                    <h2 class="section-heading nomargin">Hola soy Alonso Coca</h2>
+                    <br>
+                      <p class="lead">"Estudiar Diseño Gráfico y el ser diferente me ha permitido descubrir mis habilidades y dedicarme a lo que verdaderamente me apasiona; el diseño gráfico desde una perspectiva visual y creativa. Tras especializarme en diseño gráfico, sus diferentes áreas plásticas del arte y formarme como estudiante, decidí buscar la libertad de crear y diseñar con originalidad además de cratividad como diseñador. En los últimos años he aprendido todo el trbajo que conlleva el ser creativo y original, el ser diferente por imaginación me permite ofrecer soluciones creativas, y mi compromiso es ayudarte a crear tus ideas."</p>
+                      <br>
                        <hr class="section-heading-spacer">
                     </div>
                 </div>
                 <!-- ejemplo -->
                 <div class="row">
-                  <div class="col-md-4">
-                    <img src="../img/genesis.jpg" class="img-fluid" >
+                  <div class="col-md-">
+                    <img src="../img/flyer.jpg" class="img-fluid" >
                   </div>
-                    <div class="col-md-4">
-                    <img src="../img/genesis.jpg" class="img-fluid" >
+                    <div class="col-md-6">
+                    <img src="../img/mupi503.jpg" class="img-fluid" >
                   </div>
-                    <div class="col-md-4">
-                    <img src="../img/genesis.jpg" class="img-fluid" >
-                  </div>
-  
                 </div>
             </div>
             <footer class="py-5 bg-dark">
