--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -48,22 +48,50 @@
             </button>
             <div class="container dvfooter">
                 <div class="row">
-                    <div class="col-md-2">
-                           
-
-                           <img src="../img/genesis.jpg" class="img-fluid" >   
+                    <div class="col-md-4">
+                           <img src="../img/coca.jpg" class="img-fluid" >   
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-8">
+                    <br>
                     <h2 class="section-heading nomargin">Hola soy Alonso Coca</h2>
                     <br>
-                      <p class="lead">"Estudiar Diseño Gráfico y el ser diferente me ha permitido descubrir mis habilidades y dedicarme a lo que verdaderamente me apasiona; el diseño gráfico desde una perspectiva visual y creativa. Tras especializarme en diseño gráfico, sus diferentes áreas plásticas del arte y formarme como estudiante, decidí buscar la libertad de crear y diseñar con originalidad además de cratividad como diseñador. En los últimos años he aprendido todo el trbajo que conlleva el ser creativo y original, el ser diferente por imaginación me permite ofrecer soluciones creativas, y mi compromiso es ayudarte a crear tus ideas."</p>
+                      <p class="lead text-justify">"Estudiar Diseño Gráfico y el ser diferente me ha permitido descubrir mis habilidades y dedicarme a lo que verdaderamente me apasiona; el diseño gráfico desde una perspectiva visual y creativa. Tras especializarme en diseño gráfico, sus diferentes áreas plásticas del arte y formarme como estudiante, decidí buscar la libertad de crear y diseñar con originalidad además de cratividad como diseñador. En los últimos años he aprendido todo el trbajo que conlleva el ser creativo y original, el ser diferente por imaginación me permite ofrecer soluciones creativas, y mi compromiso es ayudarte a crear tus ideas."</p>
                       <br>
                        <hr class="section-heading-spacer">
                     </div>
                 </div>
+<section>
+        <article id="myslide" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li class="active" data-target="#myslide" data-slide-to="0"></li>
+            <li  data-target="#myslide" data-slide-to="1"></li>
+            <li  data-target="#myslide" data-slide-to="2"></li>
+          </ol>
+
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="img/img4.jpg" width="100%" class="adaptar">
+            </div class="item">
+            <div class="item">
+              <img src="img/img5.jpg" width="100%" class="adaptar">
+            </div class="item">
+            <div class="item">
+              <img src="img/img6.jpg" width="100%" class="adaptar">
+            </div>
+          
+
+          <a href="#mislide" class="left carousel-control" dta-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a href="#myslide" class="right carousel-control" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+      
+        </article>
+               
                 <!-- ejemplo -->
                 <div class="row">
-                  <div class="col-md-">
+                  <div class="col-md-6">
                     <img src="../img/flyer.jpg" class="img-fluid" >
                   </div>
                     <div class="col-md-6">
@@ -73,7 +101,7 @@
             </div>
             <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">CL09070 &copy; Alonso Coca Larios</p>
       </div>
       <!-- /.container -->
     </footer>
