--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ padding: 0 !important;
 }
 .card-body{
 	padding: 15%; 
+	background-color: #c5e0f2;
 }
 .py-5{
 	padding-top: 3rem: !important;
@@ -64,3 +65,6 @@ padding: 0 !important;
 	background-color: rgba(250, 250, 250, 0.8);
 	z-index:1;
 	}
+.texto{
+	font-size: 18pt;
+}
