arreglos en pagina principal

--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -15,111 +15,109 @@
 
 <body>
  <div id="wrapper">
-        <div class="overlay"></div>
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
-            <ul class="nav sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                       Portafolios
-                    </a>
-                </li>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="#">Alumno 1</a>
-                </li>
-                <li>
-                    <a href="#">Alumno 2</a>
-                </li>
-                <li>
-                    <a href="#">Alumno 3</a>
-                </li>
-            </ul>
-        </nav>
-        <!-- /#sidebar-wrapper -->
+  <div class="overlay"></div>
+  <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+    <ul class="nav sidebar-nav">
+      <li class="sidebar-brand">
+        <a href="#">
+         Portafolios
+       </a>
+     </li>
+     <li>
+      <a href="../index.html">Home</a>
+    </li>
+    <li>
+      <a href="#">Alumno 1</a>
+    </li>
+    <li>
+      <a href="#">Alumno 2</a>
+    </li>
+    <li>
+      <a href="#">Alumno 3</a>
+    </li>
+  </ul>
+</nav>
+<!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
-                  <span class="hamb-top"></span>
-                  <span class="hamb-middle"></span>
-                   <span class="hamb-bottom"></span>
-            </button>
-            <div class="container dvfooter">
-                <div class="row">
-                    <div class="col-md-4">
-                           <img src="../img/coca.jpg" class="img-fluid" >   
-                    </div>
-                    <div class="col-md-8">
-                    <br>
-                    <h2 class="section-heading nomargin">Hola soy Alonso Coca</h2>
-                    <br>
-                      <p class="lead text-justify">"Estudiar Diseño Gráfico y el ser diferente me ha permitido descubrir mis habilidades y dedicarme a lo que verdaderamente me apasiona; el diseño gráfico desde una perspectiva visual y creativa. Tras especializarme en diseño gráfico, sus diferentes áreas plásticas del arte y formarme como estudiante, decidí buscar la libertad de crear y diseñar con originalidad además de cratividad como diseñador. En los últimos años he aprendido todo el trbajo que conlleva el ser creativo y original, el ser diferente por imaginación me permite ofrecer soluciones creativas, y mi compromiso es ayudarte a crear tus ideas."</p>
-                      <br>
-                       <hr class="section-heading-spacer">
-                    </div>
-                </div>
-<section>
-        <article id="myslide" class="carousel slide">
-          <ol class="carousel-indicators">
-            <li class="active" data-target="#myslide" data-slide-to="0"></li>
-            <li  data-target="#myslide" data-slide-to="1"></li>
-            <li  data-target="#myslide" data-slide-to="2"></li>
-          </ol>
-
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="img/img4.jpg" width="100%" class="adaptar">
-            </div class="item">
-            <div class="item">
-              <img src="img/img5.jpg" width="100%" class="adaptar">
-            </div class="item">
-            <div class="item">
-              <img src="img/img6.jpg" width="100%" class="adaptar">
-            </div>
-          
-
-          <a href="#mislide" class="left carousel-control" dta-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-          <a href="#myslide" class="right carousel-control" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </a>
-      
-        </article>
-               
-                <!-- ejemplo -->
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="../img/flyer.jpg" class="img-fluid" >
-                  </div>
-                    <div class="col-md-6">
-                    <img src="../img/mupi503.jpg" class="img-fluid" >
-                  </div>
-                </div>
-            </div>
-            <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">CL09070 &copy; Alonso Coca Larios</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-        </div>
-
+<!-- Page Content -->
+<section id="page-content-wrapper">
+  <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+    <span class="hamb-top"></span>
+    <span class="hamb-middle"></span>
+    <span class="hamb-bottom"></span>
+  </button>
+  <article class="container dvfooter">
+    <div class="row">
+      <div class="col-md-4">
+       <img src="../img/coca.jpg" class="img-fluid" >   
+     </div>
+     <div class="col-md-8">
+      <br>
+      <h2 class="section-heading nomargin">Hola soy Alonso Coca</h2>
+      <br>
+      <p class="lead text-justify">"Estudiar Diseño Gráfico y el ser diferente me ha permitido descubrir mis habilidades y dedicarme a lo que verdaderamente me apasiona; el diseño gráfico desde una perspectiva visual y creativa. Tras especializarme en diseño gráfico, sus diferentes áreas plásticas del arte y formarme como estudiante, decidí buscar la libertad de crear y diseñar con originalidad además de cratividad como diseñador. En los últimos años he aprendido todo el trbajo que conlleva el ser creativo y original, el ser diferente por imaginación me permite ofrecer soluciones creativas, y mi compromiso es ayudarte a crear tus ideas."</p>
+      <br>    
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script src="../js/jquery/jquery-1.12.4.js"></script>
-    <script src="../js/bootstrap/bootstrap.js"></script>
-    <script src="../js/sb-admin.js"></script>
-      <script type="text/javascript">
-      $(document).ready(function () {
-          var trigger = $('.hamburger'),
-          overlay = $('.overlay'),
-          isClosed = false;
+  </div>
+</article>
+<article id="myslide" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li class="active" data-target="#myslide" data-slide-to="0"></li>
+    <li  data-target="#myslide" data-slide-to="1"></li>
+    <li  data-target="#myslide" data-slide-to="2"></li>
+  </ol>
 
-          trigger.click(function () {
-          hamburger_cross();      
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="../img/img4.jpg" width="100%" class="adaptar">
+    </div class="item">
+    <div class="item">
+      <img src="../img/img5.jpg" width="100%" class="adaptar">
+    </div class="item">
+    <div class="item">
+      <img src="../img/img6.jpg" width="100%" class="adaptar">
+    </div>
+
+
+    <a href="#mislide" class="left carousel-control" dta-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a href="#myslide" class="right carousel-control" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+</article>
+<article>   
+  <!-- ejemplo -->
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../img/flyer.jpg" class="img-fluid" >
+    </div>
+    <div class="col-md-6">
+      <img src="../img/mupi503.jpg" class="img-fluid" >
+    </div>
+  </div>
+</article>
+</section>
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">CL09070 &copy; Alonso Coca Larios</p>
+  </div>
+  <!-- /.container -->
+</footer>
+
+<!-- Bootstrap core JavaScript-->
+<script src="../js/jquery/jquery-1.12.4.js"></script>
+<script src="../js/bootstrap/bootstrap.js"></script>
+<script src="../js/sb-admin.js"></script>
+<script type="text/javascript">
+  $(document).ready(function () {
+    var trigger = $('.hamburger'),
+    overlay = $('.overlay'),
+    isClosed = false;
+
+    trigger.click(function () {
+      hamburger_cross();      
     });
 
     function hamburger_cross() {
@@ -135,14 +133,14 @@
         trigger.addClass('is-open');
         isClosed = true;
       }
-  }
-  
-  $('[data-toggle="offcanvas"]').click(function () {
-        $('#wrapper').toggleClass('toggled');
-  });  
-});
-  </script> 
-  </div>
+    }
+
+    $('[data-toggle="offcanvas"]').click(function () {
+      $('#wrapper').toggleClass('toggled');
+    });  
+  });
+</script> 
+</div>
 </body>
 
 </html>
