--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -20,7 +20,7 @@
     <ul class="nav sidebar-nav">
       <li class="sidebar-brand">
         <a href="#">
-         Portafolios
+         Portafolioss
        </a>
      </li>
      <li>
