--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -101,7 +101,7 @@
 </section>
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">CL09070 &copy; Alonso Coca Larios</p>
+    <p class="foot text-center">CL09070 &copy; Alonso Coca Larios</p>
   </div>
   <!-- /.container -->
 </footer>
