CAMBIOS DE HOME

--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -46,6 +46,9 @@
     <span class="hamb-middle"></span>
     <span class="hamb-bottom"></span>
   </button>
+     <div class="col-md-12">
+       <img src="../img/portada.jpg" width="100%" class="img-fluid" >   
+     </div>
   <article class="container dvfooter">
     <div class="row">
       <div class="col-md-4">
@@ -88,6 +91,7 @@
   </div>
 </article>
 <article>   
+  <hr>
   <!-- ejemplo -->
   <div class="row">
     <div class="col-md-6">
