cambio de portada

--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -46,8 +46,8 @@
     <span class="hamb-middle"></span>
     <span class="hamb-bottom"></span>
   </button>
-     <div class="col-md-12">
-       <img src="../img/portada.jpg" width="100%" class="img-fluid" >   
+     <div class="col-md-12 nopadding">
+       <img src="../img/portada.jpg"  class="img-fluid" >   
      </div>
   <article class="container dvfooter">
     <div class="row">
