cambios de pagina home

--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,20 @@ padding: 0 !important;
 	border-radius: 5px;
 }
 .text-member{
-	color: rgb(164, 164, 162);
+	color: rgb(0, 0, 0);
 	font-size: 18pt;
 	font-weight: lighter;
 }
+.text-center{
+	font-size: 14pt;
+}
+.titulo{
+	font-size: 22pt;
+}
+
 .card-body{
 	padding: 15%; 
-	background-color: #c5e0f2;
+	background-color: #d0d0d0;
 }
 .py-5{
 	padding-top: 3rem: !important;
