cambios de perfil alonso

--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -47,7 +47,7 @@
     <span class="hamb-bottom"></span>
   </button>
      <div class="col-md-12 nopadding">
-       <img src="../img/portada.jpg"  class="img-fluid" >   
+       <img src="../img/portadas.jpg"  class="img-fluid" >   
      </div>
   <article class="container dvfooter">
     <div class="row">
@@ -95,10 +95,10 @@
   <!-- ejemplo -->
   <div class="row">
     <div class="col-md-6">
-      <img src="../img/flyer.jpg" class="img-fluid" >
+      <img src="../img/perfume.jpg" class="img-fluid" >
     </div>
     <div class="col-md-6">
-      <img src="../img/mupi503.jpg" class="img-fluid" >
+      <img src="../img/cupcake.jpg" class="img-fluid" >
     </div>
   </div>
 </article>
