cambios finales alonso

--- a/views/perfil1.html
+++ b/views/perfil1.html
@@ -27,7 +27,7 @@
       <a href="../index.html">Home</a>
     </li>
     <li>
-      <a href="#">Alumno 1</a>
+      <a href="#">Alonso Coca</a>
     </li>
     <li>
       <a href="#">Alumno 2</a>
