--- a/views/perfil michel.html
+++ b/views/perfil michel.html
@@ -47,7 +47,7 @@
          <div class="col-md-7">
            <h1 class="text">¡Hola! soy Michelle Panameño</h1>
            <br>
-           <p> El diseño Grafico es mi medio de expresion, es como el instrumento en el que pongo todos mis sentimientos emociones y habilidades como diseñadora, a lo largo de mi carrera he adquirido nuevas experiencias que me han motivado y ahora se que el diseño grafico es una de las carreras mas cercanas a lo que me gusta hacer. 
+           <p> El diseño Grafico es mi medio de expresi+on, es como el instrumento en el que pongo todos mis sentimientos emociones y habilidades como diseñadora, a lo largo de mi carrera he adquirido nuevas experiencias que me han motivado y ahora se que el diseño grafico es una de las carreras mas cercanas a lo que me gusta hacer. 
 
             hoy en dia poseo conocimientos de dibujo manual e ilustracion digital manejo programas como photoShop, illustrator, Indesing, paint tool sai.
         </p>
