--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,9 @@ padding: 0 !important;
 }
 .foot{
 	font-size: 18pt;
-
 }
+
+
 @charset "utf-8";
 
 *{
@@ -89,26 +90,6 @@ padding: 0 !important;
 body, html {
   width: 100%;
   height: 100%;
-}
-@charset "utf-8";
-
-*{
-  margin: 0;
-  padding: 0;
-}
-
-body, html {
-  width: 100%;
-  height: 100%;
-}
-.text.nombre{
-	color: rgb(164,164,163);
-	font-weight: lighter;
-	font-size: 9pt;
-}
-.card-cuerpo{
-	padding: 15px;
-
 }
 .nopadding{
 padding: 0 !important;
@@ -140,3 +121,47 @@ padding: 0 !important;
 	border: 1px solid rgb(75,75,75);
 	border-radius: 5px;
 }
+
+.text.nombre{
+	color: rgb(164,164,163);
+	font-weight: lighter;
+	font-size: 9pt;
+
+
+}
+
+.card-cuerpo{
+	padding: 15px;
+
+}
+.py-5{
+	padding-top: 3rem !important;
+	padding-bottom: 3rem !important;
+
+}
+.bg-dark{
+	color:rgb(255,255,255);
+	background-color: rgb(0,0,0,);
+	
+
+}
+.overlay{
+	position: fixed;
+	display: none;
+	width: 100%;
+	height:100%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgb(250,250,250,0.8);
+	z-index: 1;
+}
+ .bg-dark{
+ 	background: rgb(255, 134, 38);
+ 	float: left;
+ 	min-height: 100px;
+ 	width: 100%;
+ 	color:rgb(255,255,255) !important;
+ }
+
