--- a/views/yas_vale.html
+++ b/views/yas_vale.html
@@ -52,8 +52,7 @@
               <h4> LOGO PERSONAL DE FOTOGRAFÍA</h4>
               <br> 
               <p class="text-member">onsequat vitae</p>
-              <p> descripcion
-               feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet
+              <p> logo de una marca unica al momento de darle msjsjsjsjsjsjs
              </p>
              <br>
              <a href="#">Conoce Mas</a>
